# the-duck

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
cmake/: submodule.cmake
include/algebra/: cubicPolynomials.hpp  mat4x4.hpp  pos.hpp  quat.hpp  systemsOfLinearEquasions.hpp  vec2.hpp  vec3.hpp  vec4.hpp
include/duck/: model.hpp  openglDebug.hpp  window.hpp
include/duck/controllers/: glController.hpp  guiController.hpp  mainController.hpp  subController.hpp
include/duck/controllers/utils/: mouseState.hpp
include/duck/model/components/: bSplinePolygonMesh.hpp  bezierControlPoints.hpp  c2CurveParameters.hpp  cameraParameters.hpp  cubeMap.hpp  cubeMaps.hpp  cubeParameters.hpp  curveControlPoints.hpp  mesh.hpp  meshWithTex.hpp  position.hpp  registerComponents.hpp  rotation.hpp  scale.hpp  texture.hpp  toUpdate.hpp  waterPlane.hpp
include/duck/model/systems/: c2CurveSystem.hpp  cameraSystem.hpp  cubeSystem.hpp  curveControlPointsSystem.hpp  duckSystem.hpp  followingCurveSystem.hpp  pointsSystem.hpp  rainSystem.hpp  toUpdateSystem.hpp  waterSystem.hpp
include/duck/model/systems/shaders/: cubeShader.hpp  cubicBezierShader.hpp  duckShader.hpp  shader.hpp  shaderRepository.hpp  stdShader.hpp  waterShader.hpp
include/duck/utilities/: angle.hpp  line.hpp  lineSegment.hpp  plane.hpp  setIntersection.hpp
include/duck/views/: guiView.hpp
include/ecs/: componentsCollection.hpp  componentsManager.hpp  coordinator.hpp  entitiesManager.hpp  eventHandler.hpp  eventsManager.hpp  idManager.hpp  system.hpp  systemsManager.hpp
shaders/: bezierShader.tesc  bezierShader.tese  bezierShader.vert  cubeShader.frag  cubeShader.vert  duckShader.frag  duckShader.vert  gridShader.frag  gridShader.vert  stdShader.frag  stdShader.vert  waterShader.frag  waterShader.vert
src/: CMakeLists.txt
src/algebra/: mat4x4.cpp  quat.cpp
src/duck/: model.cpp  window.cpp
src/duck/controllers/: glController.cpp  guiController.cpp  mainController.cpp
src/duck/controllers/utils/: mouseState.cpp
src/duck/model/components/: cubeMap.cpp  cubeMaps.cpp  mesh.cpp  meshWithTex.cpp  position.cpp  registerComponents.cpp  rotation.cpp  scale.cpp  texture.cpp
src/duck/model/systems/: c2CurveSystem.cpp  cameraSystem.cpp  cubeSystem.cpp  curveControlPointsSystem.cpp  duckSystem.cpp  followingCurveSystem.cpp  pointsSystem.cpp  rainSystem.cpp  toUpdateSystem.cpp  waterSystem.cpp
src/duck/model/systems/shaders/: shader.cpp
src/duck/utilities/: plane.cpp
src/duck/views/: guiView.cpp
src/ecs/: idManager.cpp
tests/: CMakeLists.txt  samples.cpp
tests/algebra/: CMakeLists.txt  cubicPolynomialsTests.cpp  matrixTests.cpp  quaternionTests.cpp  systemsOfLinearEquationsTests.cpp  vectorTests.cpp
tests/ecs/: CMakeLists.txt  componentManagerTests.cpp
